--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-calendar": "^3.3.1",
+    "react-circular-progressbar": "^2.0.3",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-spring": "^8.0.27",
+    "react-timer-hook": "^2.0.7",
     "reactstrap": "^8.9.0",
     "redux": "^4.0.5",
     "reselect": "^4.0.0",
