--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^5.0.0-beta1",
+    "framer-motion": "^3.3.0",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-calendar": "^3.3.1",
